---
source: crates/ruff_linter/src/rules/darglint/mod.rs
---
DAR402_google.py:15:1: DAR402 FasterThanLightError not explicitly raised.
   |
13 |           Speed as distance divided by time.
14 |   
15 | /     Raises:
16 | |         FasterThanLightError: If speed is greater than the speed of light.
17 | |     """
   | |____^ DAR402
18 |       return distance / time
   |

DAR402_google.py:31:1: DAR402 FasterThanLightError, DivisionByZero not explicitly raised.
   |
29 |           Speed as distance divided by time.
30 |   
31 | /     Raises:
32 | |         FasterThanLightError: If speed is greater than the speed of light.
33 | |         DivisionByZero: Divide by zero.
34 | |     """
   | |____^ DAR402
35 |       return distance / time
   |

DAR402_google.py:48:1: DAR402 DivisionByZero not explicitly raised.
   |
46 |           Speed as distance divided by time.
47 |   
48 | /     Raises:
49 | |         FasterThanLightError: If speed is greater than the speed of light.
50 | |         DivisionByZero: Divide by zero.
51 | |     """
   | |____^ DAR402
52 |       try:
53 |           return distance / time
   |
